--- a/MainStyle.css
+++ b/MainStyle.css
@@ -9,7 +9,7 @@ src: url("./Fonts/Lalezar-Regular.otf");
 
   font-family: "KanitWF";
 
-src: url("./Fonts/Kanit-Regular.ttf");
+src: url("../dinoboss/Fonts/Kanit-Regular.ttf");
 }
 
 body {
