--- a/MainStyle.css
+++ b/MainStyle.css
@@ -12,12 +12,19 @@ src: url("./Fonts/Lalezar-Regular.otf");
 src: url("../dinoboss/Fonts/Kanit-Regular.ttf");
 }
 
+@font-face {
+
+  font-family: "Eutopia";
+
+src: url("../dinoboss/Fonts/Eutopia.otf");
+}
+
 body {
   font-family: "KanitWF";
   color: #63369e;
   background-color: #DEDCF5;
   font-variant: normal;
-  background-image: url("Images/MountainBackground.png"), url("Images/MountainBackgroundColour.png");
+  background-image: url("Images/WebsiteDinobossBackgroundTop.png"), url("Images/WebsiteDinobossBackground.png");
   background-repeat: repeat-x, repeat;
   letter-spacing: normal;
   word-spacing: normal;
@@ -25,6 +32,8 @@ body {
   -moz-text-size-adjust: 140%;
   -webkit-text-size-adjust: 140%;
   -ms-text-size-adjust: 140%;
+    background-position: center top;
+    text-align: center;
 }
 
 .column-left {
@@ -63,11 +72,11 @@ body {
 }
 
 h1 {
-  font-family: "LalezarWF";
+  font-family: "Eutopia";
   color: #523777;
   letter-spacing: normal;
   word-spacing: normal;
-  font-size: 35px;
+  font-size: 48px;
   font-weight: normal;
   -moz-text-size-adjust: 120%;
   -webkit-text-size-adjust: 120%;
@@ -80,8 +89,8 @@ h2 {
 }
 
 h3 {
-  font-family: "LalezarWF";
-  font-size: 26px;
+  font-family: "Eutopia";
+  font-size: 36px;
   color: #5d3f82;
   border-top-style: none;
   border-right-style: none;
