--- a/viragon/StyleViragon.css
+++ b/viragon/StyleViragon.css
@@ -69,6 +69,7 @@ body {
 .column-center {
   display: inline-block;
   width: 33%;
+  text-align: center;
 }
 
 .halfscaledimage {
@@ -82,6 +83,7 @@ body {
   width: 960px;
   margin-right: auto;
   margin-left: auto;
+  text-align: center;
 }
 
 .screenshots {
