--- a/viragon/StyleViragon.css
+++ b/viragon/StyleViragon.css
@@ -53,7 +53,27 @@ body {
     background: url("Images/LogoAndBackground.jpg") no-repeat;
   }
 
+  .image-logo-parent {
+      position: relative;
+      overflow: hidden;
+  }
 
+  .image-logo-child {
+      position: absolute;
+      top: -9999px;
+      bottom: -9999px;
+      left: -9999px;
+      right: -9999px;
+      margin: auto;
+  }
+
+
+.image-logo {
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   -webkit-transform: translateY(-45%) translateX(-50%);
+}
 
 
 .column-left {
