--- a/MainStyle.css
+++ b/MainStyle.css
@@ -195,6 +195,7 @@ textarea
   font-size: 32px;
   color: #ffffff;
   background-color: #63369e;
+  width: 320px;
   padding-top: 15px;
   padding-right: 50px;
   padding-left: 50px;
