--- a/MainStyle.css
+++ b/MainStyle.css
@@ -173,6 +173,7 @@ input[type="text"]:focus {
 }
 
 input[type="submit"] {
+width: 220px;
 animation-name: flashanim;
 animation-duration: 3s;
 animation-iteration-count: infinite;
