--- a/MainStyle.css
+++ b/MainStyle.css
@@ -76,8 +76,15 @@ h1 {
 }
 
 h2 {
-  font-size: 26px;
+  font-family: "rainfall";
+  color: #95416F;
+  letter-spacing: normal;
+  word-spacing: normal;
+  font-size: 50px;
   font-weight: normal;
+  -moz-text-size-adjust: 200%;
+  -webkit-text-size-adjust: 200%;
+  -ms-text-size-adjust: 200%;
 }
 
 h3 {
@@ -91,6 +98,11 @@ h3 {
   font-weight: normal;
   letter-spacing: normal;
   word-spacing: normal;
+}
+
+h4 {
+  font-size: 26px;
+  font-weight: normal;
 }
 
 form {
